--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -10,7 +10,7 @@
   
   <ion-header collapse="condense" mode="ios" class="ion-no-border">
     <ion-toolbar>
-      <ion-title size="large">Fernando's News</ion-title>
+      <ion-title size="large">Fernando's Noticias</ion-title>
     </ion-toolbar>
   </ion-header>
 
